--- a/style.css
+++ b/style.css
@@ -1,2 +1,47 @@
-﻿body {
+﻿* {
+    box-sizing: border-box;
+}
+
+body {
+    background-color: #D86981;
+    margin: 0;
+    padding: 0;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh;
+}
+
+.loader {
+    height: 50px;
+    transform-origin: bottom center;
+    animation: spin 1s linear infinite;
+}
+
+.dot {
+    display: inline-block;
+    background-color: purple;
+    height: 40px;
+    width: 40px;
+    border-radius: 50%;
+    transform: scale(0);
+    animation: dot 1.5s linear infinite;
+    margin: -10px;
+}
+
+    .dot:nth-child(2) {
+        background-color: white;
+        animation-delay: 0.8s;
+    }
+
+@keyframes spin {
+    to {
+        transform: rotate(360deg);
+    }
+}
+
+@keyframes dot {
+    50% {
+        transform: scale(1);
+    }
 }
